platform/kubernetes/build-cell/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lrail-build-control
  labels:
    kubernetes.io/metadata.name: lrail-build-control
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: lrail-build
  labels:
    kubernetes.io/metadata.name: lrail-build
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: lrail-build-system
  labels:
    kubernetes.io/metadata.name: lrail-build-system
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
